# EasyRSS

./: README.md
package/: CMakeLists.txt  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: FilterDelegateModel.qml  configGeneral.qml  main.qml
package/translate/: build.sh  merge.sh
